salesforce/force-app/main/default/objects/TrustScoreFormula__mdt/TrustScoreFormula__mdt.object-meta.xml
<CustomObject>
    <description>Phase 19d — Trust Score formula weights. Single record (Default) carries the recovery/suppression weights + minimum sample size. TrustScoreService reads on every recompute.</description>
    <label>Trust Score Formula</label>
    <pluralLabel>Trust Score Formulas</pluralLabel>
</CustomObject>