salesforce/force-app/main/default/objects/TrustScoreFormula__mdt/fields/MinSampleSize__c.field-meta.xml
<CustomField>
    <fullName>MinSampleSize__c</fullName>
    <label>Min Sample Size</label>
    <description>Detectors with fewer findings than this get a null score ("No data"). Default 5.</description>
    <type>Number</type><precision>4</precision><scale>0</scale>
</CustomField>