salesforce/force-app/main/default/objects/TrustScoreFormula__mdt/fields/RecoveryRateWeight__c.field-meta.xml
<CustomField>
    <fullName>RecoveryRateWeight__c</fullName>
    <label>Recovery Rate Weight</label>
    <description>Weight applied to (recovered / (recovered + regressed)). Default 0.7. Should sum with SuppressionRateWeight__c to 1.0.</description>
    <type>Number</type><precision>3</precision><scale>2</scale>
</CustomField>