salesforce/force-app/main/default/objects/TrustScoreFormula__mdt/fields/SuppressionRateWeight__c.field-meta.xml
<CustomField>
    <fullName>SuppressionRateWeight__c</fullName>
    <label>Suppression Rate Weight</label>
    <description>Weight applied to (1 - suppressed/findings). Default 0.3.</description>
    <type>Number</type><precision>3</precision><scale>2</scale>
</CustomField>